--- a/faculté.html
+++ b/faculté.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Faculty of Technology">
     <meta name="keywords" content="HTML, CSS">
-    <meta name="author" content="Hiba Chemchat, Naima Fodil, Feriel Abbad">
+    <meta name="author" content="Mousselmal Merouane">
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
  <link rel="icon" href="/imgs/logoblanc.png">
  <link rel="stylesheet" href="/font.css">
